--- a/wireframe.html
+++ b/wireframe.html
@@ -9,8 +9,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <style>
-        .vbottom {
-            vertical-align: bottom;
+        .coin {
+            position: relative;
+            width: 100%;
+        }
+        .coin div {
+            position: absolute;
+            top: 35px;
+            left: 35px;
+            width: 100%;
+        }
+        .coin .coin-x {
+            vertical-align: text-top;
         }
     </style>
 </head>
@@ -27,13 +37,12 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-7">
-                                <p>Name</p>
-                                <small>Occupation</small>
+                                <h2>Name<br/><small>the Occupation</small></h2>
                             </div>
                             <div class="col-xs-5">
-                                <div class="vbottom">
+                                <div class="coin">
                                     <img src="http://via.placeholder.com/50x50" class="img-circle" alt="Coins">
-                                    <span class="text-right">x6</span>
+                                    <div><strong><span class="coin-x">&times;</span>6</strong></div>
                                 </div>
                             </div>
                         </div>
