--- a/wireframe.html
+++ b/wireframe.html
@@ -15,8 +15,8 @@
         }
         .coin div {
             position: absolute;
-            top: 35px;
-            left: 35px;
+            top: 20px;
+            left: 20px;
             width: 100%;
         }
         .coin .coin-x {
@@ -25,66 +25,89 @@
         table.character-heading tr td:last-child {
             padding-left: 10px;
         }
+        .mx-auto {
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
 </head>
 <body>
     <div class="container">
 
         <div class="page-header">
-            <h1>Character Wireframe</h1>
+            <h1>Select a Character</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <table class="character-heading">
-                            <tr>
-                                <td colspan="2">
-                                    <h2>Name<br/><small>the Occupation</small></h2>
-                                </td>
-                                <td colspan="1">
-                                    <div class="coin">
-                                        <img src="http://via.placeholder.com/50x50" class="img-circle" alt="Coins">
-                                        <div><strong><span class="coin-x">&times;</span>6</strong></div>
-                                    </div>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="panel-body">
-                        <img src="http://via.placeholder.com/200x200" class="img-rounded" alt="Name the Occupation">
-                    </div>
-                    <div class="panel-footer">
-                        <img src="http://via.placeholder.com/200x65" class="img-rounded" alt="Ability Description">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">Name</h2>
-                        <h4 class="panel-title">Occupation</h4>
-                    </div>
-                    <div class="panel-body">
-                        Pictures
-                    </div>
-                    <div class="panel-footer">
-                        Ability
+                <div class="center-block">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h2>Name<br/><small>the Occupation</small></h2>
+                            </div>
+                            <div class="pull-right">
+                                <div class="coin">
+                                    <img src="http://via.placeholder.com/35x35" class="img-circle" alt="Coins">
+                                    <div><strong><span class="coin-x">&times;</span>6</strong></div>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="http://via.placeholder.com/188x200" class="img-rounded center-block" alt="Name the Occupation">
+                        </div>
+                        <div class="panel-footer">
+                            <img src="http://via.placeholder.com/188x65" class="img-rounded center-block" alt="Ability Description">
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">Name</h2>
-                        <h4 class="panel-title">Occupation</h4>
+                <div class="center-block">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h2>Name<br/><small>the Occupation</small></h2>
+                            </div>
+                            <div class="pull-right">
+                                <div class="coin">
+                                    <img src="http://via.placeholder.com/35x35" class="img-circle" alt="Coins">
+                                    <div><strong><span class="coin-x">&times;</span>6</strong></div>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="http://via.placeholder.com/188x200" class="img-rounded center-block" alt="Name the Occupation">
+                        </div>
+                        <div class="panel-footer">
+                            <img src="http://via.placeholder.com/188x65" class="img-rounded center-block" alt="Ability Description">
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        Pictures
-                    </div>
-                    <div class="panel-footer">
-                        Ability
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="center-block">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h2>Name<br/><small>the Occupation</small></h2>
+                            </div>
+                            <div class="pull-right">
+                                <div class="coin">
+                                    <img src="http://via.placeholder.com/35x35" class="img-circle" alt="Coins">
+                                    <div><strong><span class="coin-x">&times;</span>6</strong></div>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="http://via.placeholder.com/188x200" class="img-rounded center-block" alt="Name the Occupation">
+                        </div>
+                        <div class="panel-footer">
+                            <img src="http://via.placeholder.com/188x65" class="img-rounded center-block" alt="Ability Description">
+                        </div>
                     </div>
                 </div>
             </div>
