Updated wireframe with game setup options

--- a/wireframe.html
+++ b/wireframe.html
@@ -8,27 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <style>
-        .coin {
-            position: relative;
-            width: 100%;
-        }
-        .coin div {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 100%;
-        }
-        .coin .coin-x {
-            vertical-align: text-top;
-        }
-        table.character-heading tr td:last-child {
-            padding-left: 10px;
-        }
-        .mx-auto {
-            margin-left: auto;
-            margin-right: auto;
-        }
+    <link rel="stylesheet" href="css/css.css" />
     </style>
 </head>
 <body>
@@ -44,7 +24,11 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h2>Name<br/><small>the Occupation</small></h2>
+                                <strong>
+                                    <span class="character-name">Name</span>
+                                    <br>
+                                    <span class="character-occupation">the Occupation</span>
+                                </strong>
                             </div>
                             <div class="pull-right">
                                 <div class="coin">
@@ -68,7 +52,11 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h2>Name<br/><small>the Occupation</small></h2>
+                                <strong>
+                                    <span class="character-name">Name</span>
+                                    <br>
+                                    <span class="character-occupation">the Occupation</span>
+                                </strong>
                             </div>
                             <div class="pull-right">
                                 <div class="coin">
@@ -92,7 +80,11 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h2>Name<br/><small>the Occupation</small></h2>
+                                <strong>
+                                    <span class="character-name">Name</span>
+                                    <br>
+                                    <span class="character-occupation">the Occupation</span>
+                                </strong>
                             </div>
                             <div class="pull-right">
                                 <div class="coin">
