--- a/index.html
+++ b/index.html
@@ -73,68 +73,75 @@
             {
                 console.log("Random characters: " + Object.keys(event));
             }
-            
-            var ACTIONS = ["Shopping", "Tithing", "Greeting", "Painting", "Bathing", "Working"];
-            function selectRandomAction()
-            {
-                var index = Math.floor(ACTIONS.length * Math.random());
-                console.log(index);
-                document.getElementById("action_container").innerHTML = ACTIONS[index];
-            }
         </script>
     </head>
     <body>
         <div class="container">
             <h1>Game Setup</h1>
 
-            <div>
+            <section id="section-settings">
                 <form>
                     <div class="form-group">
                         <strong>Select Number of Players</strong>
                         <br>
                         <label class="radio-inline">
-                            <input type="radio" name="num-players", id="num-players-2" value="2"> 2
+                            <input type="radio" value="2" v-model="num_players"> 2
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="num-players", id="num-players-3" value="3"> 3
+                            <input type="radio" value="3" v-model="num_players"> 3
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="num-players", id="num-players-4" value="4"> 4
+                            <input type="radio" value="4" v-model="num_players"> 4
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="num-players", id="num-players-5" value="5"> 5
+                            <input type="radio" value="5" v-model="num_players"> 5
                         </label>
                     </div>
                     <div class="form-group">
                         <strong>Select Character Sets</strong>
-                        <div class="checkbox disabled">
+                        <div class="checkbox">
                             <label>
-                                <input type="checkbox" value="" checked disabled>
+                                <input type="checkbox" value="base" v-model="charsets">
                                 Base Game
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" value="">
+                                <input type="checkbox" value="crossroads" v-model="charsets">
                                 Crossroads
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" value="">
+                                <input type="checkbox" value="matsuri" v-model="charsets">
                                 Matsuri
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" value="">
+                                <input type="checkbox" value="special" v-model="charsets">
                                 Special Edition Characters
                             </label>
                         </div>
                     </div>
                 </form>
-            </div>
+                <div>
+                    <p># Players: {{ num_players }}</p>
+                    <p>Character Sets: {{ charsets }}</p>
+                </div>
+            </section>
 
+            <script>
+                var vm_settings = new Vue(
+                {
+                    el: '#section-settings',
+                    data :
+                    {
+                        num_players: 2,
+                        charsets: ['base']
+                    }
+                });
+            </script>
 
             <h1>Select a Character</h1>
 
